# airbyte-dust-destination

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  TABULAR_DATA_PLAN.md  main.py  pyproject.toml  requirements.txt  test_people.csv
destination_dust/: client.py  destination.py  spec.json
scripts/: README.md  csv_to_dust.py  generate_test_csv.py
unit_tests/: test_destination.py
